# spin-webrtc

./: .gitignore  Cargo.toml  README.md  bacon.toml  spin.toml
client/: Cargo.toml  index.css  index.html  index.scss
client/src/: main.rs
protocol/: Cargo.toml
protocol/src/: lib.rs
src/: lib.rs
static/: index.html  index.js
