[package]
name = "spin-webrtc"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
anyhow = "1"
bytes = "1"
http = "0.2"
serde = { version = "1.0.147", features = [ "derive" ] }
serde_json = "1.0.89"
spin-sdk = { git = "https://github.com/dicej/spin" }
url = "2.3.1"
wit-bindgen-rust = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "cb871cfa1ee460b51eb1d144b175b9aab9c50aba" }
