[package]
name = "spin-webrtc-client"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = "0.2.0"
leptos = { version = "0.0.20", features = ["stable"] }
log = "0.4.17"
reqwasm = "0.5.0"
serde_json = "1.0.89"
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.33"
web-sys = { version = "0.3.60", features = ["RtcIceServer", "RtcConfiguration", "MediaStreamConstraints", "RtcPeerConnection", "RtcSessionDescription", "MediaStream", "RtcTrackEvent", "RtcIceCandidate", "Navigator", "MediaDevices", "MediaStreamTrack", "RtcRtpSender", "RtcSessionDescriptionInit", "RtcSdpType", "RtcPeerConnectionIceEvent", "RtcIceCandidateInit", "HtmlVideoElement", "HtmlTextAreaElement"] }
spin-webrtc-protocol = { path = "../protocol" }
js-sys = "0.3.60"
futures = "0.3.25"
once_cell = "1.16.0"
thiserror = "1.0.37"
gloo-utils = "0.1.6"
fluvio-wasm-timer = "0.2.5"

[dev-dependencies]
wasm-bindgen-test = "0.3.33"
